<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usefullink_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usefullinks.UsefullinksFragment">

    <LinearLayout
        android:layout_width="match_parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Student Life APP Tutorial"
            android:textStyle="bold" />

        <LinearLayout
...
